修复已知bug 添加MaxArrayDeque